Major site update

--- a/work/bodybuilding.html
+++ b/work/bodybuilding.html
@@ -69,8 +69,8 @@
                 </div>
                 <div class="col-sm-12 col-md-8">
                     <div class="nav-links">
-                        <a href="/work.html">Work</a>
-                          <!--<a href="/files/CH_Resume.pdf">Resume</a>--> 
+                        <!--<a href="/work.html">Work</a>--> 
+                        <!--<a href="/files/CH_Resume.pdf">Resume</a>-->    
                         <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
                 </div>
@@ -105,60 +105,60 @@
                     <h5>Outcomes</h5>
                     <h1>xxx</h1>
                     <p>xxx</p>
--->
-                </div>
+                -->
+            </div>
+        </div>
+
+        <div class="row details">
+            <div class="col-sm-12 col-lg-3">
+                <h5>Responsive Design</h5>
+            </div>
+            <div class="col-lg-9">
+                <p>The site wrapper was designed to provide a great experience at various screen resolutions, using the responsive Bootstrap framework.</p>
+            </div>
+            <div class="col-sm-12">
+                <img class="img-responsive" src="/images/projects/bbcom/bbcom_responsive.jpg">
             </div>
 
-            <div class="row details">
-                <div class="col-sm-12 col-lg-3">
-                    <h5>Responsive Design</h5>
-                </div>
-                <div class="col-lg-9">
-                    <p>The site wrapper was designed to provide a great experience at various screen resolutions, using the responsive Bootstrap framework.</p>
-                </div>
-                <div class="col-sm-12">
-                    <img class="img-responsive" src="/images/projects/bbcom/bbcom_responsive.jpg">
-                </div>
+            <div class="col-sm-12 col-lg-3">
+                <h5>Info Architecture</h5>
+            </div>
+            <div class="col-lg-9">
+                <p>A new site taxonomy was designed to reduce information overload while exposing more of the rich information available on Bodybuilding.com.</p>
+            </div>
+            <div class="col-sm-12">
+                <img class="img-responsive" src="/images/projects/bbcom/bbcom_comparison.jpg">
+            </div>
 
-                <div class="col-sm-12 col-lg-3">
-                    <h5>Info Architecture</h5>
-                </div>
-                <div class="col-lg-9">
-                    <p>A new site taxonomy was designed to reduce information overload while exposing more of the rich information available on Bodybuilding.com.</p>
-                </div>
-                <div class="col-sm-12">
-                    <img class="img-responsive" src="/images/projects/bbcom/bbcom_comparison.jpg">
-                </div>
+            <div class="col-sm-12 col-lg-3">
+                <h5>Personalization</h5>
+            </div>
+            <div class="col-lg-9">
+                <p>Quick links make it easy for users to make a purchase, find and track fitness plans, or interact with friends in the Bodybuilding.com community.</p>
+            </div>
+            <div class="col-sm-12">
+                <img class="img-responsive" src="/images/projects/bbcom/bbcom_dropdown.jpg">
+            </div>
 
-                <div class="col-sm-12 col-lg-3">
-                    <h5>Personalization</h5>
-                </div>
-                <div class="col-lg-9">
-                    <p>Quick links make it easy for users to make a purchase, find and track fitness plans, or interact with friends in the Bodybuilding.com community.</p>
-                </div>
-                <div class="col-sm-12">
-                    <img class="img-responsive" src="/images/projects/bbcom/bbcom_dropdown.jpg">
-                </div>
+            <div class="col-sm-12 col-lg-3">
+                <h5>Prototyping</h5>
+            </div>
+            <div class="col-lg-9">
+                <p>Clickable prototypes made it quick and easy to make iterations based on stakeholder feedback. Through the development process, prototypes were repurposed to communicate design intent to content creators and engineers.</p>
+            </div>
+            <div class="col-sm-12">
+                <img class="img-responsive" src="/images/projects/bbcom/bbcom_prototype.jpg">
+            </div>
 
-                <div class="col-sm-12 col-lg-3">
-                    <h5>Prototyping</h5>
-                </div>
-                <div class="col-lg-9">
-                    <p>Clickable prototypes made it quick and easy to make iterations based on stakeholder feedback. Through the development process, prototypes were repurposed to communicate design intent to content creators and engineers.</p>
-                </div>
-                <div class="col-sm-12">
-                    <img class="img-responsive" src="/images/projects/bbcom/bbcom_prototype.jpg">
-                </div>
-
-                <div class="col-sm-12 col-lg-3">
-                    <h5>Flexible Layout</h5>
-                </div>
-                <div class="col-lg-9">
-                    <p>The new wrapper was built to support dozens of unique layouts across hundreds of pages, while remaining flexible enough to handle future iterations.</p>
-                </div>
-                <div class="col-sm-12">
-                    <img class="img-responsive" src="/images/projects/bbcom/bbcom_screens.jpg">
-                </div>
+            <div class="col-sm-12 col-lg-3">
+                <h5>Flexible Layout</h5>
+            </div>
+            <div class="col-lg-9">
+                <p>The new wrapper was built to support dozens of unique layouts across hundreds of pages, while remaining flexible enough to handle future iterations.</p>
+            </div>
+            <div class="col-sm-12">
+                <img class="img-responsive" src="/images/projects/bbcom/bbcom_screens.jpg">
+            </div>
 
                 <!-- Insert Quote Below
                 <div class="row frame quote justify-content-center">
@@ -169,36 +169,36 @@
                         </h5>
                     </div>
                 </div>
--->
-            </div>
-            <a href="/work/metageek.html">
-                <div class="row next justify-content-center">
-                    <div class="col-sm-">
-                        <p>Next Case Study</p>
-                        <h3>An Ecommerce Makeover for MetaGeek <i class="far fa-arrow-right"></i></h3>
-                    </div>
-                </div>
-            </a>
+            -->
         </div>
     </div>
+</div>
+<a href="/work/metageek.html">
+    <div class="row footer next justify-content-center">
+        <div class="col-sm-">
+            <p>Next Case Study</p>
+            <h3>An Ecommerce Makeover for MetaGeek <i class="far fa-arrow-right"></i></h3>
+        </div>
+    </div>
+</a>
 
 
-    <!-- Bootstrap JQuery -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <!-- Popper.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+<!-- Bootstrap JQuery -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<!-- Popper.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<!-- Bootstrap JS -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 
-    <script>
-        [].forEach.call(document.querySelectorAll('img[data-src]'), function(img) {
-            img.setAttribute('src', img.getAttribute('data-src'));
-            img.onload = function() {
-                img.removeAttribute('data-src');
-            };
-        });
+<script>
+    [].forEach.call(document.querySelectorAll('img[data-src]'), function(img) {
+        img.setAttribute('src', img.getAttribute('data-src'));
+        img.onload = function() {
+            img.removeAttribute('data-src');
+        };
+    });
 
-    </script>
+</script>
 </body>
 
 </html>
