--- a/work/inssider.html
+++ b/work/inssider.html
@@ -72,8 +72,8 @@
                 </div>
                 <div class="col-sm-12 col-md-8">
                     <div class="nav-links">
-                        <a href="/work.html">Work</a>
-                         <!--<a href="/files/CH_Resume.pdf">Resume</a>--> 
+                        <!--<a href="/work.html">Work</a>--> 
+                        <!--<a href="/files/CH_Resume.pdf">Resume</a>-->    
                         <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
                 </div>
@@ -176,17 +176,16 @@
                     </div>
                 </div>
             </div>
-            <a href="/work/bodybuilding.html">
-                <div class="row next justify-content-center">
-                    <div class="col-sm-">
-                        <p>Next Case Study</p>
-                        <h3>Building a better Bodybuilding.com <i class="far fa-arrow-right"></i></h3>
-                    </div>
-                </div>
-            </a>
         </div>
     </div>
-
+    <a href="/work/bodybuilding.html">
+        <div class="row next justify-content-center">
+            <div class="col-sm-">
+                <p>Next Case Study</p>
+                <h3>Building a better Bodybuilding.com <i class="far fa-arrow-right"></i></h3>
+            </div>
+        </div>
+    </a>
 
     <!-- Bootstrap JQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
