--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
     <link rel="stylesheet" href="/styles/styles.css">
 
-<link href="https://fonts.googleapis.com/css?family=Bitter|Montserrat:300,500,600|Open+Sans:300,500,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bitter|Poppins:300,500,600|Open+Sans:300,500,600" rel="stylesheet">
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/regular.css" integrity="sha384-tYZB+BP2inzRg01pQhSlW4Tloc0ULXYGiBaf5kSB5Tb3+l84bJy+PKerqziKz3iv" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/light.css" integrity="sha384-PWGGmWk9+xVydf1Gzso0ouaikBBKLu4nCY52q+tBUMq5iXmRhpgTuDkjbtxZ1rXT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/fontawesome.css" integrity="sha384-ZDxYpspDwfEsC0ZJDb74i/Rqjb1CnX3a69Dz9vXv4PvvlTEkgMI02TATTRNJoZ06" crossorigin="anonymous">
 
 
-    <title>Chad Harbig | Product Consultant | UX Architect</title>
+    <title>Chad Harbig | Product Leader | UX Architect</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-26487112-2"></script>
@@ -34,6 +34,10 @@
     </script>
 
     <style>
+        h1 {
+            font-weight: 200;
+        }
+
         .quote {
             margin: 140px auto 80px;
         }
@@ -46,90 +50,163 @@
 
     </style>
 
-
 </head>
 
 <body>
     <div class="container-fluid background">
         <div class="container-fluid wrapper">
-
             <div class="row topnav">
                 <div class="col-sm-12 col-md-4">
-                    <h3><a href="/" style="margin: 0;">Chad Harbig</a></h3>
+                    <h3><a href="/">Chad Harbig</a></h3>
                 </div>
                 <div class="col-sm-12 col-md-8">
                     <div class="nav-links">
-                        <a href="/work.html">Work</a>
+                        <!--<a href="/work.html">Work</a>--> 
                         <!--<a href="/files/CH_Resume.pdf">Resume</a>-->    
                         <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
                 </div>
             </div>
-
-            <div class="container">
-                <div class="row headline">
-                    <div class="col-sm-12 justify-content-md-center text-center">
-                        <h1 class="text-center">Let's work together to deliver your next product innovation</h1>
-                        <p>Whether you're a scrappy startup trying to validate your amazing product idea,<br> or an established company that wants to stay relevant in a changing market, <br><strong>I've got the skills and expertise to help you accomplish your goals.</strong></p>
-                    </div>
-                </div>
-                <div class="row services justify-content-md-center text-center">
-                    <div class="col-sm-6">
-                        <img data-src="/images/icons/leader.png">
-                        <h5>Team Leadership</h5>
-                        <p>Cross-functional team leadership is my specialty.<br>I will help you set objectives and KPIs for your internal and external product resources, and lead them to deliver exceptional results on-time and on-budget.</p>
-                    </div>
-                    <div class="col-sm-6">
-                        <img data-src="/images/icons/strategy.png">
-                        <h5>Product Management</h5>
-                        <p>Have a product idea, but don’t know how to make it a reality?<br>I will work with you to set a product vision and strategy, and translate that vision into a Lean product roadmap that delivers real value for your customers and your business.</p>
-                    </div>
-                    <div class="col-sm-6">
-                        <img data-src="/images/icons/design.png">
-                        <h5>Experience Design</h5>
-                        <p>Looking for a product experience that your customers will love?<br>I will develop consistent UI standards for your web, mobile, or desktop product, and deliver a clean user experience that delights your users and keeps them coming back for more.</p>
-                    </div>
-                    <div class="col-sm-6">
-                        <img data-src="/images/icons/research.png">
-                        <h5>Product Research</h5>
-                        <p>If your product doesn’t solve a real problem, it's likely to fall flat.<br>I will help you identify the top pain-points that your customers will pay to solve, or validate the desirability, viability, and feasibility of your existing product idea.</p>
-                    </div>
-                    <div class="col-sm-6">
-                        <img data-src="/images/icons/architecture.png">
-                        <h5>Info Architecture</h5>
-                        <p>Odds are, your product is more complicated than it needs to be. I will evaluate the architecture of your existing website, app, or desktop software, and optimize the flow of information to make it easier for users to accomplish their goals.</p>
-                    </div>
-                    <div class="col-sm-6">
-                        <img data-src="/images/icons/training.png">
-                        <h5>UX Training</h5>
-                        <p>Want to level-up your current product resources?<br>I will train your team on all aspects of user experience; from ideation through research, experience mapping, UX design, prototyping, usability testing, and product delivery.</p>
+            <div class="container-fluid headline">
+                <div class="container headline">
+                    <div class="row">
+                        <div class="col-sm-12 justify-content-md-center text-center">
+                            <h1 class="text-center">Let's work together to deliver your next product innovation</h1>
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <a href="/work.html">
-                <div class="row footer justify-content-center" style="margin-top: 120px;">
-                    <h3>Check out some of my work <i class="far fa-arrow-right"></i></h3>
+            <div class="container-fluid services">
+                <div class="row text-center">
+                    <h3>I'm a full-stack UX professional, with the skills and experience to help you reach your next product milestone. </h3>
                 </div>
-            </a>
+                <div class="row text-center">
+                    <div class="col-sm-6">
+                        <div class="service">
+                            <img data-src="/images/icons/leader.png">
+                            <h5>Team Leadership</h5>
+                            <p>Cross-functional team leadership is my specialty.<br>I will help you set objectives and KPIs for your internal and external product resources, and lead them to deliver exceptional results on-time and on-budget.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="service">
+                            <img data-src="/images/icons/strategy.png">
+                            <h5>Product Management</h5>
+                            <p>Have a product idea, but don’t know how to make it a reality?<br>I will work with you to set a product vision and strategy, and translate that vision into a Lean product roadmap that delivers real value for your customers and your business.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="service">
+                            <img data-src="/images/icons/design.png">
+                            <h5>Experience Design</h5>
+                            <p>Looking for a product experience that your customers will love?<br>I will develop consistent UI standards for your web, mobile, or desktop product, and deliver a clean user experience that delights your users and keeps them coming back for more.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="service">
+                            <img data-src="/images/icons/research.png">
+                            <h5>Product Research</h5>
+                            <p>If your product doesn’t solve real problems, it's likely to fall flat.<br>I will help you identify the top pain-points that your customers will pay to solve, or validate the desirability, viability, and feasibility of your existing product idea.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="service">
+                            <img data-src="/images/icons/architecture.png">
+                            <h5>Info Architecture</h5>
+                            <p>Your product is probably more complicated than it needs to be.<br> I will evaluate the architecture of your existing website, app, or desktop software, and optimize the flow of information to make it easier for users to accomplish their goals.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="service">
+                            <img data-src="/images/icons/training.png">
+                            <h5>UX Training</h5>
+                            <p>Want to level-up your current product team?<br>I will train your team on all aspects of user experience; from ideation through research, experience mapping, UX design, prototyping, usability testing, and product delivery.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid gallery">
+                <div class="row text-center">
+                    <h3>I work with amazing clients to deliver innovative experiences that create measurable value for their customers</h3>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <a href="/work/inssider.html">
+                            <div class="mask">
+                                <img data-src="/images/projects/inssider/inssider_thumb.jpg">
+                            </div>
+                            <h4>Inssider</h4>
+                        </a>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <a href="/work/bodybuilding.html">
+                            <div class="mask">
+                                <img data-src="/images/projects/bbcom/bbcom_thumb.jpg">
+                            </div>
+                            <h4>Bodybuilding.com</h4>
+                        </a>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <a href="/work/metageek.html">
+                            <div class="mask">
+                                <img data-src="/images/projects/metageek/metageek_thumb.jpg">
+                            </div>
+                            <h4>Metageek</h4>
+                        </a>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <a href="/work/gigmob.html">
+                            <div class="mask">
+                                <img data-src="/images/projects/gigmob/gigmob_thumb.jpg">
+                            </div>
+                            <h4>Gigmob</h4>
+                        </a>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <a href="/work/idearoom.html">
+                            <div class="mask">
+                                <img data-src="/images/projects/idearoom/idearoom_thumb.jpg">
+                            </div>
+                            <h4>Idearoom</h4>
+                        </a>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <a href="/work/tvcc.html">
+                            <div class="mask">
+                                <img data-src="/images/projects/tvcc/tvcc_thumb.jpg">
+                            </div>
+                            <h4>Treasure Valley Community College</h4>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <!-- Bootstrap JQuery -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <!-- Popper.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+</div>
+<a href="mailto:chad.harbig@gmail.com?">
+    <div class="row footer justify-content-center">
+        <div class="col-sm-">
+            <h3>Get in Touch</h3>
+        </div>
+    </div>
+</a>
 
-    <script>
-        [].forEach.call(document.querySelectorAll('img[data-src]'), function(img) {
-            img.setAttribute('src', img.getAttribute('data-src'));
-            img.onload = function() {
-                img.removeAttribute('data-src');
-            };
-        });
+<!-- Bootstrap JQuery -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<!-- Popper.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<!-- Bootstrap JS -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 
-    </script>
+<script>
+    [].forEach.call(document.querySelectorAll('img[data-src]'), function(img) {
+        img.setAttribute('src', img.getAttribute('data-src'));
+        img.onload = function() {
+            img.removeAttribute('data-src');
+        };
+    });
+
+</script>
 </body>
 
 </html>
