--- a/work/idearoom.html
+++ b/work/idearoom.html
@@ -72,8 +72,8 @@
                 </div>
                 <div class="col-sm-12 col-md-8">
                     <div class="nav-links">
-                        <a href="/work.html">Work</a>
-                   <!--<a href="/files/CH_Resume.pdf">Resume</a>--> 
+                        <!--<a href="/work.html">Work</a>--> 
+                        <!--<a href="/files/CH_Resume.pdf">Resume</a>-->    
                         <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
                 </div>
@@ -168,16 +168,16 @@
                     </div>
                 </div>
             </div>
-            <a href="/work/tvcc.html">
-                <div class="row next justify-content-center">
-                    <div class="col-sm-">
-                        <p>Next Case Study</p>
-                        <h3>A Modern Landmark with Traditional Roots <i class="far fa-arrow-right"></i></h3>
-                    </div>
-                </div>
-            </a>
         </div>
     </div>
+    <a href="/work/tvcc.html">
+        <div class="row next justify-content-center">
+            <div class="col-sm-">
+                <p>Next Case Study</p>
+                <h3>A Modern Landmark with Traditional Roots <i class="far fa-arrow-right"></i></h3>
+            </div>
+        </div>
+    </a>
 
 
     <!-- Bootstrap JQuery -->
