--- a/work/tvcc.html
+++ b/work/tvcc.html
@@ -72,8 +72,8 @@
                 </div>
                 <div class="col-sm-12 col-md-8">
                     <div class="nav-links">
-                        <a href="/work.html">Work</a>
-                        <!--<a href="/files/CH_Resume.pdf">Resume</a>--> 
+                        <!--<a href="/work.html">Work</a>--> 
+                        <!--<a href="/files/CH_Resume.pdf">Resume</a>-->    
                         <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
                 </div>
@@ -88,6 +88,8 @@
             <div class="row summary">
                 <div class="col-sm-12 col-md-7 col-lg-8">
                     <h4>Background</h4>
+                     <p>Prior to my career in software, I honed my skills in the field of design as an architect and project manager on large commercial projects, such as this example.
+                    </p>
                     <p>The Treasure Valley Community College at Caldwell Center is the first building in a planned revitalization of downtown Caldwell, on a renewed section of the once covered Indian Creek. It offers college prep, transfer and professional technical classes. The style and materials of the three-story, 39,000 sf college were designed to reflect the dichotomy of the surrounding urban landscape, blending industrial finishes with traditional masonry and stone.
                     </p>
                     <p>Bold and dynamic primary entrances face the adjacent Indian Creek greenway, which serves as a connector to downtown Caldwell. These entrances are clearly delineated with sunshades and brick-paved patios. Further connections to the natural environment are established through extensive use of low-e glazing at lounges and lobbies where people gather to study and interact. Occupied spaces are arranged around central cores on each floor to maximize day-lighting and outside visibility.
@@ -146,16 +148,16 @@
                     </div>
                 </div>
             </div>
-            <a href="/work/inssider.html">
-                <div class="row next justify-content-center">
-                    <div class="col-sm-">
-                        <p>Next Case Study</p>
-                        <h3>A Helping Hand for ISP Technicians <i class="far fa-arrow-right"></i></h3>
-                    </div>
-                </div>
-            </a>
         </div>
     </div>
+    <a href="/work/inssider.html">
+        <div class="row next justify-content-center">
+            <div class="col-sm-">
+                <p>Next Case Study</p>
+                <h3>A Helping Hand for ISP Technicians <i class="far fa-arrow-right"></i></h3>
+            </div>
+        </div>
+    </a>
 
 
     <!-- Bootstrap JQuery -->
