--- a/work/bodybuilding.html
+++ b/work/bodybuilding.html
@@ -97,8 +97,8 @@
                 </div>
                 <div class="d-none d-md-block col-md-4 offset-md-1 col-lg-3 outcomes">
                     <h5>My Role</h5>
+                    <p>UX Lead</p>
                     <p>Project Coordinator</p>
-                    <p>Lead Experience Designer</p>
                     <p>Information Architect</p>
                     <!--
                     <br><br>
