--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/fontawesome.css" integrity="sha384-ZDxYpspDwfEsC0ZJDb74i/Rqjb1CnX3a69Dz9vXv4PvvlTEkgMI02TATTRNJoZ06" crossorigin="anonymous">
 
 
-    <title>Chad Harbig | Product Leader | UX Architect</title>
+    <title>Chad Harbig | Product Innovator | UX Architect</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-26487112-2"></script>
@@ -78,7 +78,7 @@
             </div>
             <div class="container-fluid services">
                 <div class="row text-center">
-                    <h3>I'm a full-stack UX professional, with the skills and experience to help you reach your next product milestone. </h3>
+                    <h3>I'm a full-stack UX professional, with the skills and experience to help you reach your next product milestone </h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-sm-6">
