--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="container-fluid services">
                 <div class="row text-center">
-                    <h3>I'm a full-stack UX professional, with the skills and experience to help you reach your next product milestone </h3>
+                    <h3>Whether you're a scrappy startup with a great idea, or an established corporation trying to stay relevant in a changing market, I've got the skills and experience to help you meet your goals.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-sm-6">
