bbcom image replace

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
             </div>
             <div class="container-fluid services">
                 <div class="row text-center">
-                    <h3>Whether you're a scrappy startup with a great idea, or an established corporation trying to stay relevant in a changing market, I've got the skills and experience to help you meet your goals.</h3>
+                    <h3>Whether you're a scrappy startup with a great new idea, or an established corporation trying to stay relevant in a changing market, I've got the skills and experience to help you meet your goals.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-sm-6">
                         <div class="service">
                             <img data-src="/images/icons/leader.png">
                             <h5>Team Leadership</h5>
-                            <p>Cross-functional team leadership is my specialty.<br>I will help you set objectives and KPIs for your internal and external product resources, and lead them to deliver exceptional results on-time and on-budget.</p>
+                            <p>Cross-functional team leadership is my specialty.<br>I will help you set objectives and KPIs for your internal or external product resources and lead them to deliver exceptional results.</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
