--- a/work/bodybuilding.html
+++ b/work/bodybuilding.html
@@ -174,7 +174,7 @@
     </div>
 </div>
 <a href="/work/metageek.html">
-    <div class="row footer next justify-content-center">
+    <div class="row next justify-content-center">
         <div class="col-sm-">
             <p>Next Case Study</p>
             <h3>An Ecommerce Makeover for MetaGeek <i class="far fa-arrow-right"></i></h3>
