--- a/work/tvcc.html
+++ b/work/tvcc.html
@@ -81,7 +81,7 @@
 
             <div class="jumbotron" id="hero">
                 <h1>Treasure Valley Community College</h1>
-                <h4>Caldwell, idaho</h4>
+                <h4>Caldwell, Idaho</h4>
             </div>
             <div class="page-scroll"></div>
 
