--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <h5>Info Architecture</h5>
                             <p>Your product is probably more complicated than it needs to be.<br> I will evaluate the architecture of your existing website, app, or desktop software, and optimize the flow of information to make it easier for users to accomplish their goals.</p>
                         </div>
-                    </div>d
+                    </div>
                     <div class="col-sm-6">
                         <div class="service">
                             <img data-src="/images/icons/training.png">
@@ -127,7 +127,7 @@
             </div>
             <div class="container-fluid gallery">
                 <div class="row text-center">
-                    <h3>I work with amazing companies to deliver innovative experiences that create measurable value for their customers</h3>
+                    <h3>I work with amazing clients to deliver innovative experiences that create measurable value for their customers</h3>
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
