--- a/work/gigmob.html
+++ b/work/gigmob.html
@@ -105,28 +105,39 @@
             </div>
 
             <div class="row details">
-                <div class="col-sm-12 col-lg-3">
-                    <h5>Wireframes</h5>
-                </div>
-                <div class="col-lg-9">
-                    <p>Wireframes and user flows were developed to faciliate team collaboration and work out kinks in the experience.</p>
-                </div>
-                <div class="col-sm-12">
-                    <img class="img-responsive" src="/images/projects/gigmob/gigmob_wireframe.jpg">
-                </div>
 
                 <div class="col-sm-12 col-lg-3">
                     <h5>Social Engagement</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>Concerts are more fun with friends. GigMob makes it easy for users to see which events are hottest within their social circle, and among people with whom they share common interests.</p>
+                    <p>Concerts are more fun with friends. GigMob makes it easy for users to see which events are most popular within their social circle, and among people with whom they share common interests.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" src="/images/projects/gigmob/gigmob_crowd.jpg">
                 </div>
 
                 <div class="col-sm-12 col-lg-3">
-                    <h5>SIMPLE WORKFLOW</h5>
+                    <h5>User flows</h5>
+                </div>
+                <div class="col-lg-9">
+                    <p>User flows helped the team to explore various common scenarios and work out kinks in the experience. This process resulted in a streamlined solution that makes it easy for users to accomplish their goals.</p>
+                </div>
+                <div class="col-sm-12">
+                    <img class="img-responsive" src="/images/projects/gigmob/gigmob_userflow.jpg">
+                </div>
+
+                <div class="col-sm-12 col-lg-3">
+                    <h5>Wireframes</h5>
+                </div>
+                <div class="col-lg-9">
+                    <p>Medium-fidelity wireframes with clickable walkthroughs were developed to facilitate team collaboration and communicate design intent to stakeholders.</p>
+                </div>
+                <div class="col-sm-12">
+                    <img class="img-responsive" src="/images/projects/gigmob/gigmob_wireframe.jpg">
+                </div>
+
+                                <div class="col-sm-12 col-lg-3">
+                    <h5>Intuitive Interface</h5>
                 </div>
                 <div class="col-lg-9">
                     <p>GigMob is a one-stop-shop for concertgoers. The simple interface allows users to easily browse and share events, purchase tickets, and redeem those tickets from a single app.</p>
@@ -134,6 +145,7 @@
                 <div class="col-sm-12">
                     <img class="img-responsive" src="/images/projects/gigmob/gigmob_screens.jpg">
                 </div>
+
                 <!-- Insert Quote Below
                 <div class="row frame quote justify-content-center">
                     <div class="col-sm-12">
