--- a/work/inssider.html
+++ b/work/inssider.html
@@ -152,7 +152,7 @@
                     <h5>Mockups & Prototypes</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>Hi-fidelity Sketch mockups and prototypes were used to gather feedback from internal decision-makers and potential customers. Once the desirability and viability of the concept was validated, these same artifacts were used to communicate design intent to engineers.</p>
+                    <p>Hi-fidelity mockups and prototypes were used to gather feedback from internal decision-makers and potential customers. Once the desirability and viability of the concept was validated, these same artifacts were used to communicate design intent to engineers.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" data-src="/images/projects/inssider/inssider_screens.jpg">
