--- a/work/inssider.html
+++ b/work/inssider.html
@@ -142,10 +142,20 @@
                     <h5>Storyboards</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>Storyboards were used to work through UX and UI considerations in preparation for development of a testable prototype.</p>
+                    <p>Storyboards were used extensively over the course of a 5-day design sprint to work through UX and UI considerations in preparation for development of a testable prototype.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" data-src="/images/projects/inssider/inssider_whiteboard2.jpg">
+                </div>
+
+                <div class="col-sm-12 col-lg-3">
+                    <h5>Rapid Iteration</h5>
+                </div>
+                <div class="col-lg-9">
+                    <p>Low-fidelity sketches allowed the team to quickly explore various solutions with low commitment of time and resources, helping to identify gaps in the experience and opportunities for improvement.</p>
+                </div>
+                <div class="col-sm-12">
+                    <img class="img-responsive" data-src="/images/projects/inssider/inssider_sketches.jpg">
                 </div>
 
                 <div class="col-sm-12 col-lg-3">
