--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="service">
                             <img data-src="/images/icons/leader.png">
                             <h5>Team Leadership</h5>
-                            <p>Cross-functional team leadership is my specialty.<br>I will help you set objectives and KPIs for your internal or external product resources and lead them to deliver exceptional results, while growing in their professional abilities.</p>
+                            <p>Cross-functional team leadership is my specialty.<br>I will set objectives and KPIs for your internal or external product resources and lead them to deliver exceptional results, while growing in their professional abilities.</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
