--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TE65PHRSVS"></script>
     <script>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="col-sm-12 col-md-8">
                     <div class="nav-links">
-                        <!--<a href="/work.html">Work</a>--> 
+                        <a href="#work" class="worklink">Work</a> 
                         <!--<a href="/files/CH_Resume.pdf">Resume</a>-->    
                         <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid gallery">
+            <div class="container-fluid gallery" id="work">
                 <div class="row text-center">
                     <h3>I work with amazing clients to deliver innovative experiences that create measurable value for their customers</h3>
                 </div>
