--- a/work/tvcc.html
+++ b/work/tvcc.html
@@ -53,9 +53,6 @@
                 margin-left: 20px;
             }
 
-            .jumbotron
-        }
-
     </style>
 </head>
 
@@ -69,7 +66,7 @@
                 </div>
                 <div class="col-sm-12 col-md-8">
                     <div class="nav-links">
-                        <!--<a href="/work.html">Work</a>--> 
+                        <a href="/index.html#work" class="worklink">Work</a> 
                         <!--<a href="/files/CH_Resume.pdf">Resume</a>-->    
                         <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
