--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
             <div class="container-fluid gallery" id="work">
                 <div class="row text-center">
-                    <h3>I work with amazing clients to deliver innovative experiences that create measurable value for their customers</h3>
+                    <h3>I work with amazing companies to deliver innovative experiences that create measurable value for their customers</h3>
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
