--- a/work/idearoom.html
+++ b/work/idearoom.html
@@ -65,11 +65,11 @@
 
             <div class="row topnav">
                 <div class="col-sm-12 col-md-4">
-                    <h3><a href="/" style="margin: 0;">Chad Harbig</a></h3>
+                    <h3><a href="/" id="home">Chad Harbig</a></h3>
                 </div>
                 <div class="col-sm-12 col-md-8">
                     <div class="nav-links">
-                        <a href="/index.html#work" class="worklink">Work</a> 
+                        <a href="/#work" id="worklink">Work</a> 
                         <!--<a href="/files/CH_Resume.pdf">Resume</a>-->    
                         <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
