--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/fontawesome.css" integrity="sha384-ZDxYpspDwfEsC0ZJDb74i/Rqjb1CnX3a69Dz9vXv4PvvlTEkgMI02TATTRNJoZ06" crossorigin="anonymous">
 
 
-    <title>Chad Harbig | Product Strategist | UX</title>
+    <title>Chad Harbig | Product Strategist | UX Architect</title>
 
     <style>
         h1 {
