--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
             <div class="container-fluid services">
                 <div class="row text-center">
-                    <h3>Whether you're a scrappy startup with a great new idea, or an established corporation trying to stay relevant in a changing market, I've got the skills and expertise to help you reach your goals</h3>
+                    <h3>Whether you're a scrappy startup with a great new idea, or an established corporation trying to stay relevant in a changing market, I have the skills and expertise to help you reach your goals</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-sm-6">
