lots of changes

--- a/index.html
+++ b/index.html
@@ -75,56 +75,60 @@
             </div>
             <div class="container-fluid services">
                 <div class="row text-center">
-                    <h3>Whether you're a scrappy startup with a great new idea, or an established corporation trying to stay relevant in a changing market, I have the skills and expertise to help you reach your goals</h3>
+                    <h3>
+                        Whether you're a budding startup fueled by innovation or an established corporation navigating a dynamic market, I offer the skills and expertise to support your success.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-sm-6">
                         <div class="service">
                             <img data-src="/images/icons/leader.png">
                             <h5>Team Leadership</h5>
-                            <p>Cross-functional team leadership is my specialty.<br>I will set objectives and KPIs for your internal or external product resources and lead them to deliver exceptional results while growing in their professional abilities.</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="service">
-                            <img data-src="/images/icons/strategy.png">
-                            <h5>Product Management</h5>
-                            <p>Have a product idea, but don’t know how to make it a reality?<br>I will work with you to set a product vision and strategy, and translate that vision into a Lean product roadmap that delivers real value for your customers and your business.</p>
+                            <p>
+                                I excel in cross-functional team leadership, fostering collaboration and effective communication to deliver exceptional digital experiences, while nurturing mastery of user-centered research, innovation, and design skills.</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="service">
                             <img data-src="/images/icons/design.png">
                             <h5>Experience Design</h5>
-                            <p>Looking for a product experience that your customers will love?<br>I will develop consistent UI standards for your web, mobile, or desktop product, and deliver a clean user experience that delights your users and keeps them coming back for more.</p>
+                            <p>I am deeply passionate about UX design and dedicated to creating intuitive and visually appealing experiences that effectively address the core needs of users while delivering on the strategic objectives of your business.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="service">
+                            <img data-src="/images/icons/strategy.png">
+                            <h5>Product Management</h5>
+                            <p>
+                                Companies often struggle to bring their great ideas to life. My expertise lies in converting these ideas into practical product strategies and delivery plans that generate tangible value for both users and the business.
+                            </p>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="service">
                             <img data-src="/images/icons/research.png">
-                            <h5>Product Research</h5>
-                            <p>If your product doesn’t solve real problems, it's likely to fall flat.<br>I will help you identify the top pain-points that your customers will pay to solve, or validate the desirability, viability, and feasibility of your existing product idea.</p>
+                            <h5>User Research</h5>
+                            <p>I utilize a wide range of user research methodologies to identify critical user pain-points and evaluate the potential value of addressing them, going beyond surface-level insights to uncover the underlying needs of target users.</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="service">
                             <img data-src="/images/icons/architecture.png">
                             <h5>Info Architecture</h5>
-                            <p>Your product is probably more complicated than it needs to be.<br> I will evaluate the architecture of your existing website, app, or desktop software, and optimize the flow of information to make it easier for users to accomplish their goals.</p>
+                            <p>I am highly skilled at evaluating and optimizing complex information architectures, delivering seamless experiences that drive engagement and make it easier for users to accomplish their goals.</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="service">
                             <img data-src="/images/icons/training.png">
                             <h5>UX Training</h5>
-                            <p>Want to level-up your current product team?<br>I will train your team on all aspects of user experience; from ideation through research, experience mapping, UX design, prototyping, usability testing, and product delivery.</p>
+                            <p>I can equip your team with the skills and knowledge needed to deliver exceptional user experiences from start to finish, through comprehensive training in all aspects of user-centered ideation, design, research, and delivery.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="container-fluid gallery" id="work">
                 <div class="row text-center">
-                    <h3>I work with amazing companies to deliver innovative experiences that create measurable value for their customers</h3>
+                    <h3>I work with forward-thinking companies to deliver innovative experiences that create measurable value for their users</h3>
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
