--- a/work/inssider.html
+++ b/work/inssider.html
@@ -119,7 +119,7 @@
                     <h5>Experience Map</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>I led a work session to map the common service lifecycle for ISPs providing network service to residential customers, based on our experience in the field. Common jobs, pains, and solutions were mapped at each stage, along with potential interventions.</p>
+                    <p>I led a series of working sessions to map the common service lifecycle for ISPs providing network service to residential customers, based on our experience in the field. Common jobs, pains, and solutions were mapped at each stage, along with potential interventions.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" data-src="/images/projects/inssider/inssider_whiteboard1.jpg">
@@ -129,7 +129,7 @@
                     <h5>User Scenerios</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>Specific use-cases were mapped to help us identify the most impactful pain-points for potential users of our solution.</p>
+                    <p>Specific use-cases were mapped to help us identify the most impactful pain-points for users of our solution and the opportunities with highest market potential.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" data-src="/images/projects/inssider/inssider_workflow.svg">
